[package]
name = "feedsweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.4", features = ["derive", "env"] }
feedbin_api = "0.3"
humantime = "2.1"
lazy_static = "1.4"
reqwest = "0.12"
tokio = { version = "1.27", features = ["full"] }
url = "2.3"
