[package]
name = "feedsweeper"
description = "🧹 Automatically tidy up your RSS feed backlog"
version = "0.1.2"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/ticky/feedsweeper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.4", features = ["derive", "env"] }
feedbin_api = "0.3"
humantime = "2.1"
lazy_static = "1.4"
reqwest = "0.12"
tokio = { version = "1.27", features = ["full"] }
url = "2.3"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
