[package]
name = "feedsweeper"
description = "🧹 Automatically tidy up your RSS feed backlog"
version = "0.1.2"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/ticky/feedsweeper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
feedbin_api = "0.4"
humantime = "2.3"
lazy_static = "1.4"
reqwest = "0.12"
tokio = { version = "1.47", features = ["full"] }
url = "2.5"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
